2005-01-25  Larry Jones  <lawrence.jones@ugs.com>

	* expand_path.c (expand_path): Rewrite using offsets instead of
	pointers to simplify and avoid reallocation bugs.
	(Inspired by Jeremy Bopp <jeremy@motive.com>.)

2005-01-20 Brian Murphy <brian@murphy.dk>

	* server.c fixing the style of the pam function calls and if
	statements

2005-01-19 Brian Murphy <brian@murphy.dk>

	* server.c (pam_username, pam_password) new global static
	variables to hold the username and pasword for cvs_pam_conv.
	(cvs_pam_conv) using pam_username and pam_password.
	(check_pam_password) set pam_username, pam_password before
	authentication and clear them when authentication is finished.
	(server, switch_to_user) Check for pamh being set before using
	pam functionality, NULL indicating that this user was authenticated
	using the repository password file.

2004-12-09 Derek Price <derek@ximbiot.com>

	* log-buffer.c (buf_count_mem): Compile this for PROXY_SUPPORT.
	(Report from Brad L. Chisholm <blc@bsdwins.com>.)

2004-12-09 Derek Price <derek@ximbiot.com>

	* sanity.sh (modules7): New test group.
	(Based on a patch from Mark D. Baushke <mdb@cvshome.org>, based on a
	report from Richard Verhoeven <Richard_Verhoeven@WestLB.de>.)

2004-12-09  Derek Price  <derek@ximbiot.com>

	* client.c (start_server): Avoid advertising the Redirect response when
	the user asked us not to.
	* root.h (cvsroot_t): Add redirect field.
	* root.c (new_cvsroot_t): Init redirect field.
	(parse_cvsroot_t): Parse Redirect method option.
	* server.c (serve_command_prep): Don't throw proxy_log away when
	Redirect isn't supported and it might be needed later.
	* sanity.sh (parseroot): Improve comment, add a few new tests.
	(writeproxy-ssh): Specify Redirect=yes explicitly.
	(writeproxy-ssh-noredirect): New test group.

2004-12-09  Mark D. Baushke  <mdb@cvshome.org>

	* main.c (usg): Remove Dr. Pascal Molli's CVS URL from the
	documentation.

2004-12-08  Derek Price  <derek@ximbiot.com>
