@@ -1,3 +1,8 @@
+2005-01-29 Derek Price <derek@ximbiot.com>
+
+	* sanity.sh (writeproxy-ssh-noredirect): Remove some commented out
+	code.
+
 2005-01-25  Larry Jones  <lawrence.jones@ugs.com>
 
 	* expand_path.c (expand_path): Rewrite using offsets instead of
